<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tanayagrawal.popularmoviesstageone.view.MovieInformationActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/movie_title_header"
                    style="@style/MovieInformationHeaderTextViewStyle"
                    android:layout_weight="4"
                    android:text="@string/title" />

                <TextView
                    android:id="@+id/movie_title"
                    style="@style/MovieInformationTextViewStyle"
                    android:layout_weight="2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/movie_release_date_header"
                    style="@style/MovieInformationHeaderTextViewStyle"
                    android:layout_weight="4"
                    android:text="@string/release_date" />

                <TextView
                    android:id="@+id/movie_release_date"
                    style="@style/MovieInformationTextViewStyle"
                    android:layout_weight="2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/movie_vote_average_header"
                    style="@style/MovieInformationHeaderTextViewStyle"
                    android:layout_weight="4"
                    android:text="@string/rating" />

                <TextView
                    android:id="@+id/movie_vote_average"
                    style="@style/MovieInformationTextViewStyle"
                    android:layout_weight="2" />

            </LinearLayout>

            <TextView
                android:id="@+id/movie_synopsis_header"
                style="@style/MovieInformationHeaderTextViewStyle"
                android:text="@string/synopsis" />

            <TextView
                android:id="@+id/movie_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/text_color"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
